workshop03/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggapp-deploy
  labels:
    name: bggapp-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      name: bgg-pod
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxSurge: 1
     maxUnavailable: 0

  template:
    metadata:
      name: bgg-pod
      labels:
        name: bgg-pod
      namespace: ws3
    spec:
      containers:
      - name: bgg-backend-container1
        image: stackupiss/bgg-backend:v1
        imagePullPolicy: IfNotPresent
        ports:
        - name: bgg-pod-port
          containerPort: 3000
        args: 
          - --prefix
          - /v1
        resources:
          requests:
            cpu: 100m
            memory: 128Mi



---
apiVersion: v1
kind: Service
metadata:
  name: bgg-app-svc
  labels:
    name: bgg-app-svc
spec:
  type: LoadBalancer
  selector:
    name: bgg-pod
  ports:
  - port: 8080
    targetPort: bgg-pod-port
