workshop03/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bgg-ing
  labels:
    name: bgg-ing
spec:
  ingressClassName: nginx
  rules:
  - host: bgg-157.230.193.244.nip.io
    http: 
      paths:
      - pathType: Prefix
        path: "/v1"
        backend:
          service:
            name: bgg-app-svc
            port: 
              number: 8080
      - pathType: Prefix
        path: "/v2"
        backend:
          service:
            name: bgg-app-svc2
            port: 
              number: 8080
